dashboard markup: fix shadow visible

--- a/projects/Kulikovsky/src/css/components/card.scss
+++ b/projects/Kulikovsky/src/css/components/card.scss
@@ -79,7 +79,9 @@
     }
 
     &--default {
-        @extend .margin-horizontal--none;
+        @extend .margin-left--base;
+
+        width: calc(100% - 32px);
     }
 
     &--header {
@@ -113,7 +115,6 @@
             height: vw(232);
             padding-bottom: map_get($paddings, base);
             width: 100vw;
-            margin-left: -16px;
             scroll-snap-type: x mandatory;
             white-space: nowrap;
             overflow-x: scroll;
@@ -171,7 +172,6 @@
 
             width: 100vw;
             height: 98px;
-            margin-left: -16px;
             padding-bottom: map_get($paddings, base);
             scroll-snap-type: x mandatory;
             overflow-x: scroll;
