--- a/projects/Kulikovsky/src/css/elements/page.scss
+++ b/projects/Kulikovsky/src/css/elements/page.scss
@@ -33,7 +33,7 @@ ons-tabbar {
     }
 
     .page__content {
-        padding-top: map_get($paddings, base) !important;
+        padding: map_get($paddings, base) 0 0 0 !important;
     }
 
     .toolbar-upper {
